nginx-ingress/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: xj.local 
    http:
      paths:
      - path:
        backend:
          serviceName: default-http-backend
          servicePort: 80
