nginx-ingress/ingress-devops-http.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-devops
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
# tls:
#  - hosts:
 #   - xj.local
  #  secretName: devops-ingress-secret
  rules:
  - host: xj.local 
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins-svc
          servicePort: 8080
      - path: /nexus
        backend:
          serviceName: nexus-svc
          servicePort: 8081
      - path: /nacos
        backend:
          serviceName: nacos-svc
          servicePort: 8848
      - path: /xjOM
        backend:
          serviceName: front-svc
          servicePort: 8090
